--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-cx": "^0.1.12",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1"
   }
